# fastberry

./: .gitignore  .pdm.toml  .pre-commit-config.yaml  .pylintrc  404.html  LICENSE.txt  MANIFEST.in  PIPENV.md  Pipfile  README.md  index.html  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: codeql.yml
apis/fastberry/: index.html
apis/graphql/: index.html
apis/sqlalchemy/: index.html
applications/: index.html
applications/application/: index.html
applications/commands/: index.html
applications/crud/: index.html
applications/foct/: index.html
applications/forms/: index.html
applications/graphql/: index.html
applications/manager/: index.html
applications/routers/: index.html
applications/types/: index.html
commands/: index.html
crud/: index.html
crud-app/: index.html
css/: extra.css  termynal.css
data/: README.md
databases/: index.html
diagram/: index.html
docs/: README.md  mkdocs.yml
docs/custom_theme/: main.html
docs/custom_theme/css/: extra.css
docs/custom_theme/js/: bash.js  bashv1-0-0.js  termynal.js
docs/docs/: applications.md  commands.md  crud-app.md  crud.md  diagram.md  extension.md  foct.md  graphql.md  index.md  middleware.md  operations.md  permissions.md  routers.md  settings.md  types.md
docs/docs/apis/: fastberry.md  graphql.md
docs/docs/applications/: application.md  commands.md  crud.md  foct.md  forms.md  graphql.md  index.md  manager.md  routers.md  types.md
docs/docs/css/: extra.css
docs/docs/databases/: index.md
docs/docs/environments/: development.md  production.md  staging.md  variables.md
docs/docs/getting-started/: demoapp.md  first-app.md  first-form.md  first-manager.md  first-project.md  first-type.md  firstapp.md  index.md  installation.md  template.md
docs/docs/middleware/: events.md  extension.md  middleware.md  permissions.md  plugin.md  workflow.md
docs/docs/types/: databases.md  introduction.md  scalars.md  sql-querying.md
docs/docs/utils/: cicd.md  docker.md  pdm.md
docs/example/: README.md  mkdocs.yml
docs/removed/apis/: sqlalchemy.md
environments/variables/: index.html
foct/: index.html
getting-started/: index.html
getting-started/first-app/: index.html
getting-started/first-form/: index.html
getting-started/first-manager/: index.html
getting-started/first-project/: index.html
getting-started/first-type/: index.html
getting-started/firstapp/: index.html
getting-started/installation/: index.html
getting-started/template/: index.html
graphql/: index.html
js/: bash.js  bashv1-0-0.js  termynal.js
middleware/events/: index.html
middleware/extension/: index.html
middleware/middleware/: index.html
middleware/permissions/: index.html
middleware/plugin/: index.html
middleware/workflow/: index.html
operations/: index.html
routers/: index.html
scripts/: linter.py  watcher.py
search/: search_index.json
settings/: index.html
src/: deleteme.py
src/fastberry/: __init__.py  app.py  components.py  framework.py  schema.py  spoc_admin.py
src/fastberry/config/: __init__.py  core.py  definitions.py  imports.py  settings_base.py
src/fastberry/core/: __init__.py  database.py  imports.py  models.py  plugins.py  types.py
src/fastberry/databases/: __init__.py
src/fastberry/extras/: __init__.py  authcookie.py  redirect_root.py
src/fastberry/graphql/: __init__.py  base.py  edges.py  inputs.py  manager.py  pagination.py  response.py  types.py
src/fastberry/handlers/: __init__.py  api_info.py  commands.py  extras.py  forms.py  pagination.py  routers.py  types.py
src/fastberry/scripts/: shell.py  (+2 more)
src/fastberry/scripts/templates/project-template/: .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  circus.ini  main.py  manage.py  pyproject.toml  settings.yaml
src/fastberry/scripts/templates/project-template/apps/demo/: models.py  types.py
src/fastberry/scripts/templates/project-template/apps/demo/crud/: __init__.py  demo.py
src/fastberry/scripts/templates/project-template/config/: __init__.py  docs.md  settings.py  spoc.toml
src/fastberry/scripts/templates/project-template/config/.env/: development.toml
src/fastberry/scripts/templates/project-template/config/env/: development.env  production.env  staging.env
src/fastberry/scripts/templates/project-template/graphql/: desktop.graphql  mobile.graphql  operations.json  schema.graphql
src/fastberry/scripts/templates/project-template/migrations/: env.py
src/fastberry/scripts/templates/project-template/migrations/versions/: README
src/fastberry/scripts/templates/project-template/project/: roles.json  scalars.json
src/fastberry/scripts/templates/project-template/project/databases/: __init__.py  mongo.py  sql.py
src/fastberry/scripts/templates/project-template/scripts/: linter.py  pylint.py
tests/: .gitignore  .pdm.toml  .pylintrc  LICENSE  README.md  example.db  examples.db  main.py  manage.py  pyproject.toml  settings.yaml  test_lib.py
tests/apps/frontend/: types.py
tests/apps/frontend/forms/: __init__.py
tests/apps/frontend/forms/mutation/: __init__.py
tests/apps/frontend/forms/query/: __init__.py
tests/apps/frontend/graphql/: demo.py
tests/apps/nodbc/: demo.graphql  graphql.py  types.py
tests/apps/shop/: demo.graphql  forms.py  graphql.py  manager.py  types.py
tests/apps/todo/: forms.py  manager.py  types.py
tests/apps/todo/graphql/: __init__.py  todo.py
tests/automated-testing/: test_main.py
tests/client/: main.graphql
tests/config/: __init__.py  docs.md  mode.json  settings.py  spoc.toml  spoc.toml.original
tests/config/env/: development.env
tests/graphql/: README.md  operations.json  schema.graphql  types.json
tests/graphql/client/: index.js  models.js
tests/migrations/: env.py
tests/migrations/versions/: 71485f40a569_.py  README
tests/project/: __init__.py  settings.py
tests/scripts/: keygen.sh  pylint.py
types/: index.html
types/databases/: index.html
types/introduction/: index.html
types/scalars/: index.html
types/sql-querying/: index.html
utils/docker/: index.html
utils/pdm/: index.html
(+72 files in other folders)
