[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "fastberry"
version = "0.0.49"
description = "Easy FastAPI & Strawberry"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.3",
    "PyYAML>=6.0",
    "fastapi>=0.79.0",
    "strawberry-graphql>=0.125.0",
    "python-dotenv>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/hlop3z/fastberry/"
Documentation = "https://hlop3z.github.io/fastberry/"

[project.scripts]
startproject = "fastberry.scripts.start_project:cli"

[project.optional-dependencies]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages


[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
devops = [
    "isort>=5.10.1",
    "black>=22.6.0",
    "pylint>=2.14.5",
    "bandit>=1.7.4",
    "watchdog>=2.1.9",
    "pre-commit>=2.20.0",
]
docs = [
    "mkdocs>=1.3.1",
    "mkdocs-material>=8.4.1",
]
test = [
    "uvicorn[standard]>=0.18.3",
]

[tool.pdm.scripts]
watch = "python scripts/watcher.py"
docs-dev = {shell = "cd docs/ && python -m mkdocs serve --dev-addr 0.0.0.0:8055"}
docs-gh = {shell = "cd docs/ && python -m mkdocs gh-deploy --force"}


# - `python -m mkdocs gh-deploy --force` Deploy to GitHub Pages.
