[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "fastberry"
version = "0.0.68"
description = "GraphQL Made Easy"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click>=8.1.3",
    "fastapi>=0.79.0",
    "strawberry-graphql>=0.125.0",
    "spoc>=0.1.5",
    "uvicorn[standard]>=0.18.3",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/hlop3z/fastberry/"
Documentation = "https://hlop3z.github.io/fastberry/"

[project.scripts]
startproject = "fastberry.scripts.start_project:cli"

[project.optional-dependencies]
mongo = ["dbcontroller[mongo]>=0.1.47"]
sql = ["dbcontroller[sql]>=0.1.47"]
testing = ["dbcontroller[testing]>=0.1.47"]

[tool]
[tool.pdm]

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
devops = [
    "isort>=5.10.1",
    "black>=22.6.0",
    "pylint>=2.15.0",
    "bandit>=1.7.4",
    "watchdog>=2.1.9",
    "twine>=4.0.1",
    "mypy>=0.991",
    "ssort>=0.11.6",
    "pyright>=1.1.283",
    "ruff>=0.0.168",
]
docs = ["mkdocs", "mkdocs-material"]

[tool.pdm.scripts]
lint-watch = "python scripts/linter.py"
test = { shell = "cd tests/ && python manage.py" }
pre = { shell = "pre-commit run --all-file" }
# Docs
docs-dev = { shell = "cd docs/ && python -m mkdocs serve --dev-addr 0.0.0.0:8055" }
docs-build = { shell = "cd docs/ && python -m mkdocs build" }
docs-gh = { shell = "cd docs/ && python -m mkdocs gh-deploy --force" }
# PyPi Upload
pypi = "twine upload dist/*"
