[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[metadata]
# Core
name = fastberry
version = 0.0.1
keywords = library module package management

# Author
#author = YOUR_NAME
#author_email = your.email@domain.com

# LICENSE
license_file = LICENSE.txt

# README
description = Easy FastAPI & Strawberry
long_description = file: README.md
long_description_content_type = text/markdown

# Links
#url = https://github.com/{username}/{project}
#download_url = 'https://github.com/{username}/{project}/archive/v_01.tar.gz'

# Docs
#project_urls =
    #Documentation = https://{project_docs}.com

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9


[options]
zip_safe = false
python_requires = >=3.10

# Package
packages = find:
package_dir =
    =src

# Requires
install_requires =
    motor >= 2.5.1
    sqlalchemy >= 1.4.32
    databases >= 0.5.5
    dbcontroller >= 0.1.9

[options.packages.find]
where = src


[options.entry_points]
# <name> = [<package>.[<subpackage>.]]<module>[:<object>.<object>]
#console_scripts =
    #project-lab = project_name.script:hello_world