[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[metadata]
# Core
name = fastberry
version = 0.0.3
keywords = api fastapi

# Author
author = hlop3z
#author_email = your.email@domain.com

# LICENSE
license_file = LICENSE

# README
description = Easy FastAPI & Strawberry
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/hlop3z/fastberry
download_url = https://github.com/hlop3z/fastberry/releases/download/alpha/v0.0.2.tar.gz

# Docs
#project_urls =
    #Documentation = https://{project_docs}.com

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.10
packages = find:
package_dir =
    =src
install_requires =
    click ==8.1.2
    PyYAML ==6.0
    fastapi ==0.75.1
    pydantic ==1.9.0
    strawberry-graphql ==0.104.3
    databases ==0.5.5
    motor ==2.5.1
    SQLAlchemy ==1.4.34
    dbcontroller ==0.1.10

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    startproject = fastberry.scripts.start_project:cli




    