[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "spoc"
version = "0.1.4"
description = ""
authors = [
    {name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com"},
]
dependencies = [
    "toml>=0.10.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pdm.dev-dependencies]
linters = [
    "isort",
    "black",
    "pylint>=3.0.0a5",
    "watchdog>=2.1.9",
    "bandit>=1.7.4",
]
test = [
    "toml",
    "pytest>=7.1.2",
    "pytest-asyncio>=0.19.0",
    "pytest-json-report>=1.5.0",
]
devops = [
    "click>=8.1.3",
]


[tool.pdm.scripts]
pylint = "pylint src/ --recursive=y" #  --output-format=json
bandit = "bandit -r src/" #  -f json 
lint = { composite = ["bandit", "pylint",] }
lint-watch = "python scripts/linter.py"
test = "python tests/main.py"

