[project]
name = "todo"
version = "0.1.0"
description = "Create Tasks"
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
dependencies = ["fastberry[testing]>=0.0.66"]
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]

[tool.pdm.scripts]
app = "python manage.py"
